[tool.poetry]
name = "knowledge-graph-retriever-api"
version = "0.1.0"
description = "A powerful API for semantic search and knowledge graph traversal"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pymongo = "^4.3.3"
python-dotenv = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sentence-transformers = "^2.2.2"
tqdm = "^4.65.0"
pandas = "^2.3"
numpy = "^1.24.3"
pydantic = "^2.7.4"
ollama = "^0.5.1"
requests = "^2.32.3"
jupyter = "^1.1.1"
notebook = "^7.4.3"
ipykernel = "^6.29.5"
fastapi = "^0.110.0"
langchain = "^0.3"
langchain-community = "^0.3"
rank-bm25 = "^0.2.2"
faiss-cpu = "^1.11.0"
nltk = "^3.9.1"
spacy = "^3.7.4"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
hanta = "^1.1.2"
keybert = "^0.9.0"
multimethod = "^2.0"
openpyxl = "^3.1.5"
py2neo = "^2021.2.4"
matplotlib = "^3.10.3"
plotly = "^6.1.2"
neo4j = "^5.28.1"
packaging = "^24.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kgr-api = "api:app"
